testsuite/poke.pkl/neq-any-diag-1.pk
/* { dg-do compile } */

defun equalstructs = (any a, any b) int:
  {
    return a != b; /* { dg-error "invalid operands" } */
  }
